# resources/views/livewire/tabler/erp/projet.blade.php
@@ -42,7 +42,7 @@
                         @livewire('tabler.erp.reports', ['projet_id'=> $projet->id])
                         @break
                     @case(3)
-                        Taches
+                        @livewire('tabler.task.task-projet-list', ['projet_id'=> $projet->id])
                         @break
                     @case(4)
                         Contacts
